# portal-poc

./: .env  Dockerfile  configurator.json  main.py  process.py  pyproject.toml  translations.json
