[tool.poetry]
name = "portal-poc"
version = "0.1.0"
description = ""
authors = ["Gijs Straathof <gijs.straathof@harborn.com>"]
readme = "README.md"
packages = [{include = "portal_poc"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
